--- a/e-commerce/src/components/OrderValue/OrderValue.css
+++ b/e-commerce/src/components/OrderValue/OrderValue.css
@@ -1,5 +1,5 @@
 .order-value {
-    @apply flex items-center mb-10 justify-between border rounded p-5;
+    @apply block sm:flex items-center mb-10 justify-between border rounded p-5;
 
     img {
         @apply w-[40px] mr-8;
@@ -11,5 +11,9 @@
 
     .order-left, .order-right {
         @apply flex items-center;
+    }
+
+    .order-right {
+        @apply mt-4 justify-between;
     }
 }
