--- a/e-commerce/src/pages/Home/Home.css
+++ b/e-commerce/src/pages/Home/Home.css
@@ -1,11 +1,11 @@
 .home-page {
-    @apply text-3xl font-bold flex gap-5;
+    @apply flex-col text-3xl font-bold flex gap-5 sm:flex-row ;
 
     .home-page-side-bar {
-        @apply w-1/4 bg-[#f3f3f3] h-full;
+        @apply w-full sm:w-1/3 bg-[#f3f3f3] h-full;
     }
 
     .home-page-content {
-        @apply w-3/4 h-full;
+        @apply w-full sm:w-3/4 h-full;
     }
 }
